--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node ./test/index.js",
     "example": "node example.js",
     "diff-lint": "make diff-lint",
     "lint": "jshint .",
